--- a/topic/intro/index.html
+++ b/topic/intro/index.html
@@ -68,7 +68,7 @@
 
 <p>Github Markdown <a href="https://help.github.com/articles/markdown-basics/">basics</a></p>
 
-<p><em>To be updated later</em></p>
+<p><em>More to be updated later</em></p>
 
                     </div>
                 </section>
